...
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/vacancies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/prompt"
...
            android:layout_width="match_parent"
            android:hint="@string/prompt_type"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/checkout_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reservebed"
            android:textStyle="bold" />
...
